--- a/webapp/manager/src/index.html
+++ b/webapp/manager/src/index.html
@@ -4,9 +4,12 @@
   <meta charset="utf-8">
   <title>Manager</title>
   <base href="/">
-
+  <script src="https://use.fontawesome.com/54ea1f19de.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  
+
 </head>
 <body>
   <app-root></app-root>
